--- a/testPage.html
+++ b/testPage.html
@@ -16,8 +16,15 @@
     <button class="btn" onclick="ReadSmartCard()">1.ReadCard</button>
     <button class="btn" onclick="openWebcam()">2.openWebcam</button>
     <button class="btn" onclick="takePhotoBT()">3.takePhoto</button>
+    <button class="btn" onclick="takePhotoBT()">3.takePhoto</button>
+    <button class="btn" id="btnPage">Go to Main Page</button>
 
-
+    <script>
+        document.getElementById('btnPage').addEventListener('click', function () {
+            // window.location.href = 'http://127.0.0.1:3001/?#';
+            window.history.back();
+        });
+    </script>
 
 
     <video class="model-container-webcam" id="webcam-vid" autoplay="true" style="transform: scaleX(-1)"></video>
@@ -38,6 +45,9 @@
         var heading = document.getElementById("myHeading");
 
         const timer = (ms) => new Promise((res) => setTimeout(res, ms)); // ตั้งขึ้นมาเพื่อใช้ในการ delay
+
+
+
 
 
         //================= อ่านบัตร =========================
@@ -249,8 +259,8 @@
                 text = "test";
             }
 
-            heading.innerHTML =  `Send Line = ` + text;
-            
+            heading.innerHTML = `Send Line = ` + text;
+
             await getToken();
             api_sendTextToLine(tokenGroup, text);
             api_sendTextToLine(tokenGroup_allGroup, text);
@@ -264,8 +274,8 @@
                 text = "test";
             }
 
-            heading.innerHTML =  `Send Line = ` + text;
-            
+            heading.innerHTML = `Send Line = ` + text;
+
 
             api_sendTextToLine('B1lOLAjFGidIvy2sz6UUHUVQewc6KNjWFBnaKMifu2D', text);
         }
@@ -274,10 +284,10 @@
 
         async function checkSite() {
 
-            heading.innerHTML =  'Check Site';
+            heading.innerHTML = 'Check Site';
             await getToken();
             var site = await api_getSite(token, site_uuid);
-            heading.innerHTML =  'Site = ' + site['site_name'];
+            heading.innerHTML = 'Site = ' + site['site_name'];
 
         }
 
