--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <li style="--i:0;">
             <a href="#" id="button4" ontouchstart="PopupCheckIn();"><ion-icon name="bed-outline"></ion-icon><h2>เช็คอิน</h2></a>
           </li>
-          <li style="--i:1;">
+          <!-- <li style="--i:1;">
             <a href="#" id="button6" ontouchstart="PopupReservation();"><ion-icon name="calendar-outline"></ion-icon><h2>จองห้องพัก</h2></a>
-          </li>
+          </li> -->
           <!-- <li style="--i:2;">
             <a href="#" ><ion-icon name="mail-outline"></ion-icon><h2>บริการเสริม</h2></a>
           </li>
