add triger_checkMail() when click check-in

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
     <button id="button7" class="btn" onclick=""><ion-icon name="accessibility-outline"></ion-icon>Dance</button>
   </div>
  
-<script src="scriptindex.js"></script><!-- ?v=9999 -->
+<script src="scriptindex1.js"></script><!-- ?v=9999 -->
 <script src="apiShibaPortal.js"></script>
 <script src="apiShibaGoogleSC.js"></script>
 <script src="checkDateAndTime.js"></script>
