--- a/index_offline.html
+++ b/index_offline.html
@@ -935,10 +935,13 @@
     <button id="button7ac" class="btn" ontouchstart=""><ion-icon name="accessibility-outline"></ion-icon>Dance</button>
   </div>
  
-<script src="scriptindex_offline.js"></script><!-- ?v=9999 -->
+<script src="scriptindex_offline1.js"></script><!-- ?v=9999 -->
 <script src="apiShibaPortal.js"></script>
 <script src="checkDateAndTime.js"></script>
 <script src="reservation_offline1.js"></script>
+<script src="mouseEvent.js"></script>
+<script src="\ESP32\SeandSerial.js"></script>
+
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
  
