--- a/test/testPayment.html
+++ b/test/testPayment.html
@@ -5,8 +5,6 @@
     <title>Button Click Example</title>
     <script src="/getParameterURL.js"></script>
     <script src="/apiShibaPortal.js"></script>
-    
-
 </head>
 
 <body>
@@ -17,20 +15,15 @@
 
 <script>
     async function handleClick() {
-
-
         await getToken();
-        console.log(">>>" +token);
-
+        console.log(">>>" + token);
         var val = await payapi();
-
         var result = ">>>" + JSON.stringify(val);
-
         document.getElementById("output").innerHTML = result;
     }
 
-
     async function payapi() {
+        console.log('payapi');
         const data = {
             "amount": 130000, // (required) amount with 2 decimal i.e. 40 thb input 4000
             "booking_id": "54abce4c-0085-4027-a5eb-b410191cd468", // (required) save in meta_data in OMISE charge detail
@@ -38,7 +31,6 @@
             "expire_min": 30, // (optional) default : 60 min
             "currency": "thb" // (optional) default : thb
         }
-
         var options = {
             "async": true,
             "crossDomain": true,
@@ -51,7 +43,7 @@
             'payload': JSON.stringify(data)
         };
 
-        let res = await fetch('https://3867-2001-fb1-c4-cb7d-487-ca69-4e9f-788d.ap.ngrok.io',options)
+        let res = await fetch('https://shiba-api.shibaroomth.com/payment-gateway/create-promptpay-charge', options)
             .then((response) => response.json())
             .then((body) => {
                 return body;
